--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
 @import url("devSon.css");
 @import url("devTrung.css");
 
+@font-face {
+    font-family: 'FontAwesome';
+    src: url("../fonts/fontawesome-webfont.eot?v=4.7.0");
+    src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+    font-weight: normal;
+    font-style: normal; 
+}
+
 :root {
     --primary: #dc4f72;
     --secondary: #0d5fa8;
@@ -15,6 +23,9 @@
     --bg-color: #fff;
     --iframe-filter : grayscale(0%);
     --light-bg-color: #F7F9FC;
+    --card-curve: 6px;
+    --card-hover-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.09);
+    --transformY: translateY(-0.5rem);
 }
 
 * {
@@ -23,12 +34,20 @@
     box-sizing: border-box;
 }
 
-html,
+html {
+    font-family: sans-serif;
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  
 body {
-    font-family: 'Nunito Sans', sans-serif;
-    scroll-behavior: smooth;
-    background-color: var(--bg-color);
-    height:300px;
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff; 
 }
 
 ul,
@@ -42,7 +61,23 @@ li {
 }
 
 /*? reset the tags automatically set up by bootstrap */
-p,
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0.5rem; 
+}
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    line-height: 1.2; 
+}      
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+    font-family: 'Nunito', sans-serif; 
+}   
+
 h3 {
     margin-bottom: 0;
 }
@@ -90,3 +125,21 @@ h4{
     box-shadow: 0 0 0 0.2rem rgba(220, 79, 114, 0.5);
 }
 
+img {
+    vertical-align: middle;
+    border-style: none;
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto; 
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px; 
+}
