--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
     --card-curve: 6px;
     --card-hover-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.09);
     --transformY: translateY(-0.5rem);
+    --card-box-shadow: 1px 5px 7.5px rgba(14, 13, 13, 0.2);
 }
 
 * {
