--- a/css/devSon.css
+++ b/css/devSon.css
@@ -95,8 +95,13 @@ img.shadow {
     border: 1px solid #eee; 
 }
 @media (min-width: 576px){
+@media (min-width: 992px){
 .count .mt-sm-5, .my-sm-5 {
     margin-top: 3rem !important;
+}
+}
+.count .mt-lg-0 {
+    margin-top: 0!important;
 }
 }
 /* section count end */
