--- a/css/devSon.css
+++ b/css/devSon.css
@@ -94,14 +94,14 @@ img.shadow {
     transition: 0.3s ease;
     border: 1px solid #eee; 
 }
-@media (min-width: 576px){
+@media (max-width: 576px){
+    .count .mt-sm-5, .my-sm-5 {
+        margin-top: 3rem !important;
+    }
+}
 @media (min-width: 992px){
-.count .mt-sm-5, .my-sm-5 {
-    margin-top: 3rem !important;
-}
-}
-.count .mt-lg-0 {
-    margin-top: 0!important;
-}
+    .count .mt-lg-0 {
+        margin-top: 0!important;
+    }
 }
 /* section count end */
