--- a/css/devCuong.css
+++ b/css/devCuong.css
@@ -143,12 +143,33 @@
     .feature .accordion-item {
         border-width: 1px 1px 0;
         border-style: solid;
-        border-color: rgb(239, 239, 239);
+        border-color: #d0d0d0;
         border-radius: 0;
     }
 
-    .feature .accordion-item:nth-child(3){
-        border-bottom-width: 1.45px;
+    .feature .accordion-item:nth-child(3) {
+        border-bottom-width: 1.5px;
         border-bottom-color: #c1c1c1;
+    }
+
+    .feature .accordion-button{
+        font-size: 20px;
+        font-weight: 600;
+        padding: 10px 15px;
+    }
+
+
+
+    .feature .accordion-button::after {
+        content: "";
+        margin-top: 3px;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        border-top: 12px solid #c1c1c1;
+        margin-left:auto;
+        width:0;
+        height:0;
+        background: none;
+        transition: none;
     }
 }
