--- a/css/devCuong.css
+++ b/css/devCuong.css
@@ -101,16 +101,6 @@
     transform: translateY(-0.5rem);
 }
 
-/*? screeen for max width < 769px(this is a small screen) */
-
-
-
-
-
-
-
-
-
 /* CLIENTS */
 
 
@@ -130,35 +120,53 @@
 
 }
 
+@media screen and (max-width:800px) {
+
+    /* FEATURE */
+    .feature .title h3 {
+        font-size: 40px;
+        line-height: 50px;
+    }
+}
+
+/*? screeen for max width < 769px(this is a small screen) */
 @media screen and (max-width:768.98px) {
 
+    /* FEATURE */
     .feature__project {
         display: none;
     }
 
     .feature .accordion {
         display: block;
+        padding: 0;
+        margin: 48px 6px 0;
+        border-width: 1px 1px 1px;
+        border-style: solid;
+        border-color: var(--border-color-light);
+        border-radius: 0;
+
     }
 
     .feature .accordion-item {
-        border-width: 1px 1px 0;
-        border-style: solid;
-        border-color: #d0d0d0;
+        border: none;
+    }
+
+    .feature .accordion-item .accordion-button {
+        border-bottom: 1px solid var(--border-color-light);
+        color: var(--title-color);
+    }
+
+    .feature .accordion-item:last-of-type .accordion-button.collapsed {
         border-radius: 0;
     }
 
-    .feature .accordion-item:nth-child(3) {
-        border-bottom-width: 1.5px;
-        border-bottom-color: #c1c1c1;
-    }
 
-    .feature .accordion-button{
+    .feature .accordion-button {
         font-size: 20px;
         font-weight: 600;
         padding: 10px 15px;
     }
-
-
 
     .feature .accordion-button::after {
         content: "";
@@ -166,10 +174,100 @@
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
         border-top: 12px solid #c1c1c1;
-        margin-left:auto;
-        width:0;
-        height:0;
+        margin-left: auto;
+        width: 0;
+        height: 0;
         background: none;
         transition: none;
+    }
+
+    .feature .accordion-button:focus {
+        outline: 0;
+        box-shadow: none
+    }
+
+    .feature .accordion-item .project__item {
+        padding: 35px 15px;
+    }
+
+    .feature .accordion-item .project__item h3 {
+        margin-bottom: 14px;
+    }
+
+    .feature .accordion-item .item__left,
+    .feature .accordion-item .item__right {
+        padding: 0 13px;
+    }
+
+
+    .feature .accordion-button:not(.collapsed) {
+        background-color: transparent;
+        color: #dc4f72;
+        border-bottom: 3px solid #dc4f72;
+    }
+
+    .feature .accordion-button:not(.collapsed)::after {
+        border-top-color: #9b9797;
+    }
+
+}
+
+@media screen and (max-width:767.98px) {
+
+    /* FEATURE */
+    .feature .accordion-item .item__left,
+    .feature .accordion-item .item__right {
+        padding: 0 18px;
+    }
+}
+
+@media screen and (max-width:766px) {
+
+    /* FEATURE */
+    .feature .btn {
+        line-height: 44px;
+        padding: 0px 20px;
+    }
+}
+
+
+
+
+@media screen and (max-width:666px) {
+
+    /* FEATURE */
+    .feature .accordion-item .item__left,
+    .feature .accordion-item .item__right {
+        padding: 0 18px;
+    }
+
+    .feature .title h3 {
+        font-size: 32px;
+        line-height: 42px;
+    }
+}
+
+@media screen and (max-width:480px) {
+
+    /* FEATURE */
+    .feature .project__item h3 {
+        font-size: 24px;
+        line-height: 30px;
+    }
+}
+
+@media screen and (max-width:209.98px) {
+
+    .feature .accordion-item .item__left,
+    .feature .accordion-item .item__right {
+        padding: 0 15px;
+    }
+}
+
+@media screen and (max-width:203.98px) {
+
+    .feature .accordion-item .item__left,
+    .feature .accordion-item .item__right {
+        padding: 0 10px;
     }
 }
