--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     --text-color: #5a5a5a;
     --border-color: #eee;
     --bg-lightgrey: #f7f7f7;
-    --border-color-light: #f8f9fa;
+    --border-color-light: #d0d0d0;
     --bg-color: #fff;
     --iframe-filter : grayscale(0%);
     --light-bg-color: #F7F9FC;
