--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,13 @@
 @import url("devSon.css");
 @import url("devTrung.css");
 
-@font-face {
+/* @font-face {
     font-family: 'FontAwesome';
     src: url("../fonts/fontawesome-webfont.eot?v=4.7.0");
     src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
     font-weight: normal;
     font-style: normal; 
-}
+} */
 
 :root {
     --primary: #dc4f72;
@@ -35,13 +35,11 @@
     box-sizing: border-box;
 }
 
-html {
+html,body {
     font-family: 'Nunito', sans-serif;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
-  
-body {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
     margin: 0;
     font-size: 1rem;
     font-weight: 400;
@@ -49,7 +47,8 @@ body {
     color: #212529;
     text-align: left;
     background-color: #fff; 
-}
+} 
+
 
 ul,
 ol {
