Complete build brand, footer and back to top button

--- a/css/devCuong.css
+++ b/css/devCuong.css
@@ -1,3 +1,18 @@
+/* HEADER */
+header .container {
+    max-width: 1200px;
+    padding-right: 25px;
+    padding-left: 25px;
+}
+
+
+
+
+header .dropdown-toggle::after{
+    display: none;
+}
+
+
 /* FEATURE */
 .feature .container {
     max-width: 1200px;
@@ -104,8 +119,9 @@
 
 /* CLIENTS */
 .clients {
-    background: linear-gradient(to right, var(--bg-color), rgba(255, 255, 255, 0.77)), url(../img/b2.jpg);
+    background: linear-gradient(to right, var(--bg-color), rgba(255, 255, 255, 0.77)), url(https://wp.w3layouts.com/masterwork/wp-content/themes/masterwork/assets/images/b2.jpg);
     background-size: cover;
+    background-repeat: no-repeat, no-repeat, no-repeat;
     background-position: center;
     background-attachment: fixed;
     padding-bottom: 35px;
@@ -193,7 +209,7 @@
     color: var(--title-color);
     margin-bottom: 0;
     font-weight: 400;
-}x
+}
 
 .clients .item__bg .message .name p {
     font-size: 13px;
@@ -215,17 +231,240 @@
     border-radius: 0;
 }
 
-.owl-theme .owl-dots .owl-dot.active span{
+.owl-theme .owl-dots .owl-dot.active span {
     background-color: var(--primary);
 }
 
 
 
 /* BUILD BRAND */
+.buildBrand .container {
+    max-width: 1200px;
+    padding-right: 25px;
+    padding-left: 25px;
+}
+
+.buildBrand .title {
+    max-width: 750px;
+}
+
+.buildBrand .title h3 {
+    color: var(--title-color);
+    font-size: 46px;
+    line-height: 1;
+    font-weight: 700;
+}
+
+.buildBrand .title p {
+    color: var(--text-color);
+    font-size: 16px;
+    line-height: 22.5px;
+    font-weight: 400;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+/* FOOTER */
+
+.footer__content {
+    background: var(--light-bg-color);
+}
+
+footer .container {
+    max-width: 1200px;
+    padding-right: 25px;
+    padding-left: 25px;
+}
+
+footer .row.footer__top .col-lg-6 {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+footer .row.child .col-md-4 {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+footer .row.child .col-md-4 h3 {
+    font-size: 20px;
+    line-height: 25px;
+    color: var(--title-color);
+    margin-bottom: 30px;
+    font-weight: 700;
+}
+
+
+footer .row.child .col-md-4 li {
+    display: block;
+    list-style: none;
+    margin: 10px 0;
+}
+
+footer .row.child .col-md-4 li a {
+    color: #656f7b;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 25px;
+    padding: 0;
+    text-transform: capitalize;
+}
+
+footer .row.footer__top .col-lg-6.right h3 {
+    font-size: 20px;
+    line-height: 25px;
+    color: var(--title-color);
+    margin-bottom: 30px;
+    font-weight: 700;
+}
+
+footer .footer__form {
+    background-color: var(--bg-color);
+    padding: 2em;
+    border-radius: var(--card-curve);
+    box-shadow: var(--card-box-shadow);
+}
+
+footer .footer__form h4 {
+    font-size: 18px;
+    line-height: 25px;
+    color: var(--title-color);
+    margin-bottom: 30px;
+    font-weight: 500;
+}
+
+footer .footer__form .subscribe {
+    display: flex;
+    margin-bottom: 15px;
+    justify-content: space-between;
+}
+
+footer .footer__form .subscribe input {
+    background: var(--light-bg-color);
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    outline: none;
+    width: 78%;
+    color: var(--title-color);
+    font-weight: 600;
+    border-radius: var(--card-curve);
+}
+
+footer .footer__form .subscribe button {
+    text-align: center;
+    background: var(--primary);
+    border: none;
+    outline: none;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 12px 20px;
+    cursor: pointer;
+    width: 20%;
+    color: #fff;
+    border-radius: var(--card-curve);
+}
+
+footer .footer__form p {
+    line-height: 22px;
+    color: var(--text-color);
+    font-size: 16px;
+}
+
+
+footer .footer__bottom {
+    border-top: 1px solid var(--border-color);
+}
+
+
+footer .footer__bottom p {
+    line-height: 22px;
+    color: var(--text-color);
+    font-size: 16px;
+}
+
+footer .footer__bottom p>a {
+    color: var(--title-color);
+}
+
+footer .footer__bottom p>a:hover {
+    opacity: 0.8;
+    color: var(--primary);
+}
+
+footer .footer__bottom .social li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+footer .footer__bottom .social li a {
+    color: var(--title-color);
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    display: inline-block;
+    border-radius: 50%;
+    text-align: center;
+    transition: 0.3s ease;
+}
+
+footer .footer__bottom .social li a:hover {
+    color: var(--primary);
+}
+
+
+/* BACK TO TOP */
+.backToTop {
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    z-index: 99;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+    cursor: pointer;
+    width: 50px;
+    height: 45px;
+    background: var(--primary);
+    padding: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s ease;
+    text-align: center;
+
+}
+
+.backToTop:hover{
+    opacity: 1;
+}
+
+.backToTop span {
+    line-height: 45px;
+    color: #fff;
+    font-size: 22px;
+}
+
+.cd-top--is-visible {
+    visibility: visible;
+    opacity: 0.7;
+}
+
 
 
 
 /** RESPONSIVE */
+
+@media screen and (max-width:1190px) {
+
+    /* FOOTER */
+    footer .footer__form .subscribe button {
+        width: 30%;
+    }
+
+}
+
 @media screen and (max-width:992.98px) {
 
     /* FEATURE */
@@ -236,13 +475,27 @@
 
 }
 
+@media screen and (max-width:991px) {
+    .footer__bottom {
+        display: block !important;
+    }
+
+    .footer__bottom .FooterSocial {
+        text-align: center;
+    }
+}
+
 @media screen and (max-width:800px) {
 
     /* FEATURE */
-    .feature .title h3 {
+    .feature .title h3,
+    .clients .title h3,
+    .buildBrand .title h3 {
         font-size: 40px;
         line-height: 50px;
     }
+
+
 }
 
 /*? screeen for max width < 769px(this is a small screen) */
@@ -335,6 +588,12 @@
     .feature .accordion-item .item__right {
         padding: 0 18px;
     }
+
+    /* BUILD BRAND */
+    .buildBrand .btn {
+        line-height: 44px;
+        padding: 0px 20px;
+    }
 }
 
 @media screen and (max-width:766px) {
@@ -346,8 +605,30 @@
     }
 }
 
+@media screen and (max-width:667px) {
 
+    /* CLIENT */
+    .clients .title h3,
+    .buildBrand .title h3 {
+        font-size: 32px;
+        line-height: 42px;
+    }
 
+    .clients .item__bg {
+        grid-template-columns: 1fr;
+        grid-gap: 30px;
+        text-align: center;
+        padding: 3rem;
+    }
+
+    .clients .item__bg .img-circle {
+        margin: 0 auto;
+    }
+
+    .clients .item__bg .message i {
+        left: 0;
+    }
+}
 
 @media screen and (max-width:666px) {
 
@@ -363,12 +644,38 @@
     }
 }
 
+@media screen and (min-width:576px) {
+
+    /* BUILD BRAND */
+    .buildBrand .container {
+        max-width: 100%;
+        padding-right: 30px;
+        padding-left: 30px;
+    }
+}
+
+@media screen and (max-width:575.98px) {
+
+    /* BUILD BRAND */
+    .buildBrand .container {
+        max-width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
+
 @media screen and (max-width:480px) {
 
     /* FEATURE */
     .feature .project__item h3 {
         font-size: 24px;
         line-height: 30px;
+    }
+
+    /* CLIENTS */
+    .clients .item__bg {
+        grid-gap: 10px;
+        padding: 2rem 1rem;
     }
 }
 
