Create new section commitment 2/11 devSon

--- a/css/devSon.css
+++ b/css/devSon.css
@@ -105,3 +105,54 @@ img.shadow {
     }
 }
 /* section count end */
+/* section COMMITMENT star */
+.new-block {
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.33)), url(../img/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat, no-repeat, no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 480px;
+    display: grid;
+    align-items: center;
+    padding: 2rem 0;
+}
+.commitment .middle-section {
+    max-width: 550px;
+}
+.commitment .middle-section h2 {
+    color: #ffffff;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 700;
+}
+.commitment .link-list-menu p {
+    font-size: 16px;
+    color: #eee;
+    line-height: 24.5px;
+}
+.commitment .theme-button {
+    transition: 0.3s ease-out;
+    display: inline-block;
+    line-height: 52px;
+    font-weight: 700;
+    font-size: 14px;
+    margin: 0px;
+    padding: 0px 30px;
+    text-transform: uppercase;
+}
+.commitment .btn-light {
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+}
+@media (min-width: 768px){
+.commitment .mb-md-5 {
+    margin-bottom: 3rem!important;
+}
+.commitment .mt-md-4 {
+    margin-top: 1.5rem!important;
+}
+}
+
+/* section COMMITMENT end */
