--- a/css/devSon.css
+++ b/css/devSon.css
@@ -156,3 +156,124 @@ img.shadow {
 }
 
 /* section COMMITMENT end */
+/* section questions star */
+.questions{
+    background-color: var(--light-bg-color);
+}
+.questions .header-section {
+    max-width: 750px;
+    margin: 0 auto;
+}
+.questions .sub-title {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 700;
+    color: var(--primary);
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+.questions .header-section h3 {
+    color: var(--title-color);
+    font-size: 46px;
+    line-height: 1;
+    font-weight: 700;
+}
+.questions .header-section p {
+    color: var(--text-color);
+    font-size: 16px;
+    line-height: 22.5px;
+    font-weight: 400;
+    margin-left: auto;
+    margin-right: auto;
+}
+.questions .faq-image {
+    position: sticky;
+    top: 80px;
+}
+.questions .menu-faq ul {
+    /* list-style: none; */
+    padding: 0;
+    max-width: 750px;
+    margin: 0 auto;
+}
+.questions .menu-faq ul li {
+    position: relative;
+    padding: 25px 50px 25px 20px;
+    border: 1px solid var(--border-color);
+    margin: 0 0 15px 0;
+    border-radius: var(--card-curve);
+    background: var(--bg-color);
+}
+input[type="checkbox"] {
+    box-sizing: border-box;
+    padding: 0; }
+.questions .menu-faq ul li input[type=checkbox] {
+    position: absolute;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    -webkit-appearance: none; 
+}
+.questions .menu-faq ul li i {
+    position: absolute;
+    transform: translate(-6px, 0);
+    margin-top: 16px;
+    right: 25px;
+    top: 16px;
+}
+.questions .menu-faq h2 {
+    font-size: 20px;
+    line-height: 1;
+    font-weight: normal;
+    display: block;
+    margin: 0;
+    cursor: pointer;
+    color: var(--title-color);
+}
+.questions .menu-faq p {
+    color: var(--text-color);
+    font-size: 16px;
+    line-height: 24.5px;
+    position: relative;
+    overflow: hidden;
+    max-height: 800px;
+    opacity: 1;
+    transform: translate(0, 0);
+    margin-top: 14px;
+    z-index: 2;
+}
+.questions .menu-faq ul li i:before, .questions .menu-faq ul li i:after {
+    content: "";
+    position: absolute;
+    background-color: var(--title-color);
+    width: 3px;
+    height: 9px;
+}
+.questions .menu-faq ul li input[type=checkbox]:checked ~ p {
+    margin-top: 0;
+    max-height: 0;
+    opacity: 0;
+    transform: translate(0, 50%);
+}
+.questions .menu-faq ul li i:before {
+    transform: translate(2px, 0) rotate(45deg);
+    transition: all 0.25s ease-in-out; 
+}
+.questions .menu-faq ul li i:after {
+    transform: translate(-2px, 0) rotate(-45deg);
+    transition: all 0.25s ease-in-out; 
+}
+@media (max-width: 1200px){
+.questions .container {
+    max-width: 100%;
+    padding-right: 25px;
+    padding-left: 25px;
+    margin-right: auto;
+    margin-left: auto;
+}
+}
+/* section questions end */
